--- a/[EN]Lab_14_7_Language_model_for_the_Shakespeare_dataset.ipynb
+++ b/[EN]Lab_14_7_Language_model_for_the_Shakespeare_dataset.ipynb
@@ -116,7 +116,7 @@
         "# If you would like to make further imports from tensorflow, add them here\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
         "with open('gdrive/MyDrive/Shakespeare.txt', 'r', encoding='utf-8') as file:\n",
         "    text = file.read()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
         "\n",
         "text_chunks = text.split('.')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
         "for chunk in np.array(text_chunks)[inx]:\n",
         "    print(chunk)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +328,7 @@
         "    return tokenizer\n",
         "    "
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +341,7 @@
         "\n",
         "tokenizer = create_character_tokenizer(text_chunks)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -377,7 +377,7 @@
         "    return tokenizer.texts_to_sequences(list_of_strings)\n",
         "    "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -390,7 +390,7 @@
         "\n",
         "seq_chunks = strings_to_sequences(tokenizer, text_chunks)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
         "    \n",
         "    "
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -457,7 +457,7 @@
         "padded_sequences = make_padded_dataset(seq_chunks)\n",
         "padded_sequences.shape"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +515,7 @@
         "    targets = array_of_sequences[:, 1:]\n",
         "    return (inputs, targets)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -534,7 +534,7 @@
         "print(input_seq.shape)\n",
         "print(target_seq.shape)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +569,7 @@
         "\n",
         "batch_size = 32"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -596,7 +596,7 @@
         "input_seq_stateful = input_seq[inx]\n",
         "target_seq_stateful = target_seq[inx]"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -626,7 +626,7 @@
         "input_valid = input_seq_stateful[num_train_examples:]\n",
         "target_valid = target_seq_stateful[num_train_examples:]"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -666,7 +666,7 @@
         "    return tf.data.Dataset.from_tensor_slices((input_array, target_array)).batch(batch_size, drop_remainder=True)\n",
         "    "
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -680,7 +680,7 @@
         "train_data = make_Dataset(input_train, target_train, batch_size)\n",
         "valid_data = make_Dataset(input_valid, target_valid, batch_size)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -695,7 +695,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -763,7 +763,7 @@
         "    return model\n",
         "    "
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -781,7 +781,7 @@
         "model = get_model(len(tokenizer.word_index) + 1, batch_size)\n",
         "model.summary()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,14 +829,14 @@
         "\n",
         "skip_training = False"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "DJhnIUHSRfTt",
-        "outputId": "4377ec09-2337-4268-a736-1228dcfea08a",
+        "outputId": "775caa59-593f-43df-8360-7272a5a8ca89",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -861,13 +861,27 @@
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            "196/196 [==============================] - 4705s 24s/step - loss: 0.6811 - sparse_categorical_accuracy: 0.3093 - val_loss: 0.5731 - val_sparse_categorical_accuracy: 0.4040\n",
+            "196/196 [==============================] - 4075s 21s/step - loss: 0.7177 - sparse_categorical_accuracy: 0.2857 - val_loss: 0.5966 - val_sparse_categorical_accuracy: 0.3816\n",
             "Epoch 2/15\n",
-            "196/196 [==============================] - 4653s 24s/step - loss: 0.4994 - sparse_categorical_accuracy: 0.4580 - val_loss: 0.4753 - val_sparse_categorical_accuracy: 0.4941\n",
+            "196/196 [==============================] - 4152s 21s/step - loss: 0.5240 - sparse_categorical_accuracy: 0.4329 - val_loss: 0.4963 - val_sparse_categorical_accuracy: 0.4758\n",
             "Epoch 3/15\n",
-            "196/196 [==============================] - 4669s 24s/step - loss: 0.4296 - sparse_categorical_accuracy: 0.5272 - val_loss: 0.4295 - val_sparse_categorical_accuracy: 0.5396\n",
+            "196/196 [==============================] - 4718s 24s/step - loss: 0.4484 - sparse_categorical_accuracy: 0.5084 - val_loss: 0.4437 - val_sparse_categorical_accuracy: 0.5262\n",
             "Epoch 4/15\n",
-            "135/196 [===================>..........] - ETA: 22:58 - loss: 0.4030 - sparse_categorical_accuracy: 0.5600"
+            "196/196 [==============================] - 4395s 22s/step - loss: 0.4059 - sparse_categorical_accuracy: 0.5503 - val_loss: 0.4178 - val_sparse_categorical_accuracy: 0.5508\n",
+            "Epoch 5/15\n",
+            "196/196 [==============================] - 4663s 24s/step - loss: 0.3790 - sparse_categorical_accuracy: 0.5761 - val_loss: 0.4002 - val_sparse_categorical_accuracy: 0.5676\n",
+            "Epoch 6/15\n",
+            "196/196 [==============================] - 4359s 22s/step - loss: 0.3597 - sparse_categorical_accuracy: 0.5937 - val_loss: 0.3912 - val_sparse_categorical_accuracy: 0.5764\n",
+            "Epoch 7/15\n",
+            "196/196 [==============================] - 4198s 21s/step - loss: 0.3435 - sparse_categorical_accuracy: 0.6092 - val_loss: 0.3875 - val_sparse_categorical_accuracy: 0.5811\n",
+            "Epoch 8/15\n",
+            "196/196 [==============================] - 4076s 21s/step - loss: 0.3289 - sparse_categorical_accuracy: 0.6233 - val_loss: 0.3863 - val_sparse_categorical_accuracy: 0.5828\n",
+            "Epoch 9/15\n",
+            "196/196 [==============================] - 4265s 22s/step - loss: 0.3144 - sparse_categorical_accuracy: 0.6387 - val_loss: 0.3882 - val_sparse_categorical_accuracy: 0.5824\n",
+            "Epoch 10/15\n",
+            "196/196 [==============================] - 3965s 20s/step - loss: 0.3000 - sparse_categorical_accuracy: 0.6537 - val_loss: 0.3924 - val_sparse_categorical_accuracy: 0.5841\n",
+            "Epoch 11/15\n",
+            "  9/196 [>.............................] - ETA: 1:02:04 - loss: 0.3033 - sparse_categorical_accuracy: 0.6589"
           ]
         }
       ]
