--- a/[EN]Lab_14_7_Language_model_for_the_Shakespeare_dataset.ipynb
+++ b/[EN]Lab_14_7_Language_model_for_the_Shakespeare_dataset.ipynb
@@ -116,7 +116,7 @@
         "# If you would like to make further imports from tensorflow, add them here\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "3fRagWNBR0-E",
-        "outputId": "cb5aa931-49d3-4040-a6eb-f7547ec5c5e4",
+        "outputId": "e0d681bf-200c-4b6c-858a-418a997b5a73",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -162,7 +162,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,10 +190,10 @@
       "source": [
         "# Load the text file into a string\n",
         "\n",
-        "with open('gdrive/MyDrive/Shakespeare.txt', 'r', encoding='utf-8') as file:\n",
+        "with open('gdrive/MyDrive/dataset/Shakespeare.txt', 'r', encoding='utf-8') as file:\n",
         "    text = file.read()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -206,7 +206,7 @@
         "\n",
         "text_chunks = text.split('.')"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "CMZj2MIYRfSP",
-        "outputId": "93421b07-f7ca-4c71-c7bb-63db4ec24572",
+        "outputId": "fbe14026-1718-4030-ff22-7166bd18eda1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -235,7 +235,7 @@
         "for chunk in np.array(text_chunks)[inx]:\n",
         "    print(chunk)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,39 +243,25 @@
           "text": [
             "\n",
             "\n",
-            "LADY GREY:\n",
-            "And that is more than I will yield unto:\n",
-            "I know I am too mean to be your queen,\n",
-            "And yet too good to be your concubine\n",
+            "FRIAR LAURENCE:\n",
+            "Wisely and slow; they stumble that run fast\n",
+            "\n",
+            "Save you, sir\n",
             "\n",
             "\n",
-            "Second Keeper:\n",
-            "But, if thou be a king, where is thy crown?\n",
+            "Captain:\n",
+            "My lord of Salisbury, we have stay'd ten days,\n",
+            "And hardly kept our countrymen together,\n",
+            "And yet we hear no tidings from the king;\n",
+            "Therefore we will disperse ourselves: farewell\n",
             "\n",
-            "KING HENRY VI:\n",
-            "My crown is in my heart, not on my head;\n",
-            "Not decked with diamonds and Indian stones,\n",
-            "Nor to be seen: my crown is called content:\n",
-            "A crown it is that seldom kings enjoy\n",
-            "\n",
-            "\n",
-            "JULIET:\n",
-            "I do confess it, and repent it, father\n",
+            "You thus employ'd, I will go root away\n",
+            "The noisome weeds, which without profit suck\n",
+            "The soil's fertility from wholesome flowers\n",
             "\n",
             "\n",
-            "MARCIUS:\n",
-            "Sir, praise me not;\n",
-            "My work hath yet not warm'd me: fare you well:\n",
-            "The blood I drop is rather physical\n",
-            "Than dangerous to me: to Aufidius thus\n",
-            "I will appear, and fight\n",
-            "\n",
-            "What is your will?\n",
-            "\n",
-            "LADY CAPULET:\n",
-            "This is the matter:--Nurse, give leave awhile,\n",
-            "We must talk in secret:--nurse, come back again;\n",
-            "I have remember'd me, thou's hear our counsel\n"
+            "PETRUCHIO:\n",
+            "And yet I come not well\n"
           ]
         }
       ]
@@ -328,7 +314,7 @@
         "    return tokenizer\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -341,7 +327,7 @@
         "\n",
         "tokenizer = create_character_tokenizer(text_chunks)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -377,7 +363,7 @@
         "    return tokenizer.texts_to_sequences(list_of_strings)\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -390,7 +376,7 @@
         "\n",
         "seq_chunks = strings_to_sequences(tokenizer, text_chunks)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -439,14 +425,14 @@
         "    \n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "IKB26MgJRfS0",
-        "outputId": "63bf7ba7-0419-44c9-a0a6-0b0b0d1e4abd",
+        "outputId": "62ff2866-636a-4278-f71c-5dd6eeab0f6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -457,7 +443,7 @@
         "padded_sequences = make_padded_dataset(seq_chunks)\n",
         "padded_sequences.shape"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +453,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 12
         }
       ]
     },
@@ -515,14 +501,14 @@
         "    targets = array_of_sequences[:, 1:]\n",
         "    return (inputs, targets)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "MzHXg9HcRfTB",
-        "outputId": "e7f47635-9cc2-4f18-d16d-afca5b0df02b",
+        "outputId": "fca315e1-45d5-4f77-d803-44f779679d73",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -534,7 +520,7 @@
         "print(input_seq.shape)\n",
         "print(target_seq.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +555,7 @@
         "\n",
         "batch_size = 32"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -596,7 +582,7 @@
         "input_seq_stateful = input_seq[inx]\n",
         "target_seq_stateful = target_seq[inx]"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -626,7 +612,7 @@
         "input_valid = input_seq_stateful[num_train_examples:]\n",
         "target_valid = target_seq_stateful[num_train_examples:]"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -666,7 +652,7 @@
         "    return tf.data.Dataset.from_tensor_slices((input_array, target_array)).batch(batch_size, drop_remainder=True)\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -680,7 +666,7 @@
         "train_data = make_Dataset(input_train, target_train, batch_size)\n",
         "valid_data = make_Dataset(input_valid, target_valid, batch_size)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -690,12 +676,12 @@
       ],
       "metadata": {
         "id": "A3COsgdZhER1",
-        "outputId": "c8568a1d-7e54-4d3c-d4cb-7fdd25a69d92",
+        "outputId": "61b8fdd0-7908-417a-ab7f-ba79e0684dc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +691,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 20
         }
       ]
     },
@@ -763,14 +749,14 @@
         "    return model\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AmmEfYo-RfTl",
-        "outputId": "85cb408a-2ce3-4861-decc-f3e3a95d00db",
+        "outputId": "8cea6ad0-4640-4883-d8e5-6232de8f89ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -781,7 +767,7 @@
         "model = get_model(len(tokenizer.word_index) + 1, batch_size)\n",
         "model.summary()"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,7 +815,7 @@
         "\n",
         "skip_training = False"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -885,6 +871,84 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Resume training\n",
+        "model.compile(optimizer='adam', loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+        "              metrics=['sparse_categorical_accuracy'])\n",
+        "model.load_weights('gdrive/MyDrive/dataset/models/ckpt')"
+      ],
+      "metadata": {
+        "id": "6aMz7hffpL3s",
+        "outputId": "637514b5-b9b1-45b7-ed29-671ad04e9e77",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x7f217025cbd0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "checkpoint_callback=tf.keras.callbacks.ModelCheckpoint(filepath='gdrive/MyDrive/dataset/models/ckpt',\n",
+        "                                                        save_weights_only=True,\n",
+        "                                                        save_best_only=True)\n",
+        "csv_callback = tf.keras.callbacks.CSVLogger('gdrive/MyDrive/dataset/models/history.csv', append=True)\n",
+        "history = model.fit(train_data, initial_epoch=10, epochs=15, validation_data=valid_data, \n",
+        "                    validation_steps=50, callbacks=[checkpoint_callback, csv_callback])"
+      ],
+      "metadata": {
+        "id": "kJ1wHdRfpZUC",
+        "outputId": "a3010e7b-6eb2-4fbc-e59e-0fd99a1cc401",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 11/15\n",
+            "196/196 [==============================] - 4712s 24s/step - loss: 0.3144 - sparse_categorical_accuracy: 0.6387 - val_loss: 0.3882 - val_sparse_categorical_accuracy: 0.5824\n",
+            "Epoch 12/15\n",
+            "196/196 [==============================] - 4430s 23s/step - loss: 0.3000 - sparse_categorical_accuracy: 0.6537 - val_loss: 0.3924 - val_sparse_categorical_accuracy: 0.5841\n",
+            "Epoch 13/15\n",
+            "196/196 [==============================] - 4517s 23s/step - loss: 0.2845 - sparse_categorical_accuracy: 0.6711 - val_loss: 0.4012 - val_sparse_categorical_accuracy: 0.5811\n",
+            "Epoch 14/15\n",
+            "196/196 [==============================] - 4541s 23s/step - loss: 0.2695 - sparse_categorical_accuracy: 0.6879 - val_loss: 0.4134 - val_sparse_categorical_accuracy: 0.5738\n",
+            "Epoch 15/15\n",
+            "196/196 [==============================] - 4651s 24s/step - loss: 0.2577 - sparse_categorical_accuracy: 0.7004 - val_loss: 0.4302 - val_sparse_categorical_accuracy: 0.5678\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "history_dict = pd.read_csv('gdrive/MyDrive/dataset/models/history.csv').to_dict(orient='list')"
+      ],
+      "metadata": {
+        "id": "JEAxBuYeoquv"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -988,7 +1052,7 @@
         "# Re-build the model and load the saved weights\n",
         "\n",
         "model = get_model(len(tokenizer.word_index) + 1, batch_size=1)\n",
-        "model.load_weights(tf.train.latest_checkpoint('./models/'))"
+        "model.load_weights(tf.train.latest_checkpoint('gdrive/MyDrive/dataset/models/ckpt'))"
       ],
       "execution_count": null,
       "outputs": []
